# ReversePolishC-

./: .gitignore  ArithmeticExpression.cpp  ArithmeticExpression.h  CMakeLists.txt  Function.cpp  Number.cpp  README.md  ReversePolishCalculator.h  Stack.hpp  main.cpp
Application/: main.cpp
Calculator/: Calculator.cpp  Calculator.h  CalculatorFactory.cpp  CalculatorFactory.h  ReversePolishCalculator.cpp  ReversePolishCalculator.h
Equation/: Equation.cpp  Equation.h  EquationFactory.cpp  EquationFactory.h
Equation/NormalEquationFormat/: EquationNormalFormat.cpp  EquationNormalFormat.h  NormalEquationIdentifier.h
Utility/: TwoSidedEquationAsString.cpp  TwoSidedEquationAsString.h
arithmeticExpression/: ArithmeticExpression.h  Function.h  Number.h  Opperator.cpp  Opperator.h
dataStructure/: List.cpp  List.hpp  Stack.cpp  Stack.hpp
stringParsing/: EquationParser.cpp  EquationParser.h  EquationParserFactory.cpp  EquationParserFactory.h  StringToEquation.cpp  StringToEquation.h
stringParsing/NormalEquationFormat/: EquationNormalFormat.h  NormalEquationFormat.cpp  NormalEquationFormat.h  NormalEquationFormatParser.cpp  NormalEquationFormatParser.h  NormalEquationIdentifier.cpp  NormalEquationIdentifier.h
test/: test.cpp  test.h
